# fandangogrey

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  run_experiments_1.sh  run_experiments_2.sh
demo/: 01-miller.fan  02-expressions.fan  03-transactions.fan  04-coverage.fan  Untitled-1.ipynb  cheat-sheet.md
docs/: .gitignore  About.md  Binary.md  Bits.md  BookIntro.md  Commands.md  Constraints.md  Contributing.md  Conversion.md  DerivationTree.md  FAQ.md  Fuzzing.md  Generators.md  Gif.md  Hatching.md  ISO8601.md  Including.md  Installing.md  Intro.md  Invoking.md  Language.md  Makefile  Parsing.md  Paths.md  PythonAPI.md  README.txt  Recursive.md  Reference.md  Regexes.md  ReleaseNotes.md  Setup.md  Shell.md  Stdlib.md  Strategies.md  Title.pages  Tree.py  _config.yml  _toc.yml  additions.fan  binary-pack.fan  (+37 more)
evaluation/execution_feedback/: plot_dgf_experiment.py  plot_only_legend.py  run_experiment.py
evaluation/execution_feedback/experiment_configurations/: cjson_dgf.yaml  graphviz_afl.yaml  graphviz_codecoverage.yaml  graphviz_execpathlength.yaml  graphviz_memory.yaml  libxml2_afl.yaml  libxml2_codecoverage.yaml  libxml2_execpathlength.yaml  libxml2_memory.yaml  lunasvg_afl.yaml  (+3 more)
evaluation/experiments/: run_experiments.py
evaluation/vs_isla/: run_evaluation.py
language/: FandangoLexer.g4  FandangoParser.g4
src/fandango/: __init__.py  _version.py  framework.py  logger.py
tests/: test_cli.py  test_constraints.py  test_execution_feedback.py  test_grammar.py  test_language.py  test_optimizer.py  test_parsing.py  test_searches.py  test_slices.py  test_softconstraint.py  test_visitor.py
tests/resources/: bar.fan  bitstream-a.fan  bitstream.fan  byte_alternative.fan  children.fan  complex_constraints.fan  constraints.fan  csv.fan  determinism.fan  digit.fan  dynamic_repetition.fan  empty.fan  eval.fan  example_number.fan  fandango.fan  gen_number.fan  generator_remove.fan  grammar_primary.fan  hash.fan  import.fan  imported.py  incomplete.fan  indirect_children.fan  int.fan  long_string.fan  min_reps.fan  persons.fan  persons_with_constr.fan  repetitions.fan  rgb.fan  rgb.txt  simple.fan  slicing.fan  softvalue.fan  twodigits.fan
utils/bt2fan/: bt2fan.py
utils/dtd2fan/: dtd2fan.py  svg.fan  svg11.fan  svgextreme.fan
(+118 files in other folders)
